Updated columns for tablets and desktops

--- a/css/main.css
+++ b/css/main.css
@@ -73,13 +73,17 @@ footer {
 
   #column-3 {
     background-color: darkcyan;
+    width: 100%;
   }
 
   footer {
     background-color: ;
   }
-  
-}
+
+  .col-3 {
+    width: 50%;
+  }
+ }
 
 
 /*---------- Desktops ----------*/
@@ -98,10 +102,15 @@ footer {
 
   #column-3 {
     background-color: deepskyblue;
+    width: 33.3%;
   }
 
   footer {
     background-color: ;
+  }
+
+  .col-3 {
+    width: 33.3%;
   }
    
 }
